--- a/IzvorniKod/Frontend/login-feature/src/cssFiles/login.css
+++ b/IzvorniKod/Frontend/login-feature/src/cssFiles/login.css
@@ -80,3 +80,23 @@ button {
     text-decoration: underline;
 }
 
+.avatar-placeholder {
+    display: flex;
+    width: 100%;
+    align-content: space-between;
+}
+
+.avatar-placeholder img {
+    display: flex;
+    align-self: space-between;
+    margin-right: 20px;
+    height: 100px;
+    width: 100px;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+.avatar-placeholder img:hover {
+    height: 150px;
+    width: 150px;
+}
