--- a/IzvorniKod/Frontend/login-feature/src/cssFiles/login.css
+++ b/IzvorniKod/Frontend/login-feature/src/cssFiles/login.css
@@ -97,6 +97,14 @@ button {
 }
 
 .avatar-placeholder img:hover {
-    height: 150px;
-    width: 150px;
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.2);
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s
+}
+
+.error-message {
+    color: red;
 }
