--- a/IzvorniKod/frontend/src/cssFiles/login.css
+++ b/IzvorniKod/frontend/src/cssFiles/login.css
@@ -8,9 +8,9 @@ body {
 }
 
 #root {
-    background: linear-gradient(45deg, blue, red);
+    /*background: linear-gradient(45deg, blue, red);*/
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    /*background: linear-gradient(120deg, #56CCF2, #2F80ED);*/
+    background: linear-gradient(120deg, #56CCF2, #2F80ED);
 
     /*background: linear-gradient(120deg, #00b09b,#96c93d);*/
 }
