--- a/IzvorniKod/frontend/src/cssFiles/Filter.css
+++ b/IzvorniKod/frontend/src/cssFiles/Filter.css
@@ -6,7 +6,7 @@
     border: 2px solid #adadad;
     background-color: white;
     border-radius: 5px;
-    box-shadow: 5px 10px #888888
+    margin: 20px 20px;
 }
 .form-filter {
     display: grid;
