Napravljene promjene u App.js: dodana komponenta Oglas koja je napravljena u folderu components. Oglas.js file je komponenta koja služi kao template za izgled oglasa. Trenutno se koriste hardcodirane vrijednosti kako bi se ispitala ispravnost funkcionalnosti te kako bi poslužile za lakše pisanje css-a. Napravljen je file Oglas.css u kojem su definirani osnovni stilovi za Oglas komponentu. U Filter.js je dodana funkcionalnost prikaza odabrane opcije filtriranja. Napravljene manje promjene u App.css fileu te Filter.css fileu.

--- a/IzvorniKod/frontend/src/cssFiles/App.css
+++ b/IzvorniKod/frontend/src/cssFiles/App.css
@@ -2,9 +2,10 @@ html,
 body {
   height: 100%;
   width: 100%;
+  overflow: -moz-scrollbars-vertical;
+  overflow-y: scroll;
 }
 
-
-.home-page {
-  min-height: 100vh;
+.home-page h3 {
+  margin-left: 20px;
 }
