Postignuto renderanje Oglas komponente. Trenutno je dio Filter komponente (radi isprobavanja funkcionalnosti). Stilovi nisu još potpuni

--- a/IzvorniKod/frontend/src/cssFiles/Oglas.css
+++ b/IzvorniKod/frontend/src/cssFiles/Oglas.css
@@ -10,6 +10,10 @@
     margin: 20px;
 }
 
+.oglas-korisnik-info img {
+    border: 1px solid black;
+    border-radius: 20px;
+}
 .oglas-info-container{
     display: flex;
     flex-direction: column;
