--- a/IzvorniKod/frontend/src/cssFiles/App.css
+++ b/IzvorniKod/frontend/src/cssFiles/App.css
@@ -3,9 +3,13 @@ body {
   height: 100%;
   width: 100%;
   overflow: -moz-scrollbars-vertical;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
+.home-page {
+  height: 100%;
+    overflow-y: auto;
+}
 .home-page h3 {
   margin-left: 20px;
 }
