--- a/IzvorniKod/frontend/src/cssFiles/Oglas.css
+++ b/IzvorniKod/frontend/src/cssFiles/Oglas.css
@@ -13,6 +13,10 @@
 .oglas-korisnik-info img {
     border: 1px solid black;
     border-radius: 20px;
+    width: 75px;
+    height: 75px;
+    margin: 10px 5px;
+    border-radius: 35px;
 }
 .oglas-info-container{
     display: flex;
