--- a/IzvorniKod/frontend/src/cssFiles/home/oglas.css
+++ b/IzvorniKod/frontend/src/cssFiles/home/oglas.css
@@ -2,7 +2,7 @@
     border: 1px solid black;
     border-radius: 10px;
     margin: 10px;
-    max-width: 50%;
+    /* max-width: 50%; */
     background-color: white;
 }
 
