--- a/IzvorniKod/frontend/src/cssFiles/home/rank.css
+++ b/IzvorniKod/frontend/src/cssFiles/home/rank.css
@@ -9,17 +9,16 @@
     border: 1px solid black;
     border-radius: 10px;
     margin: 10px;
-    max-width: 50%;
     height: 70px;
     background-color: white;
     justify-items: right;
 }
 
 .rank-mark {
-    border: 1px solid black;
-    border-radius: 25px;
+    border: 2px solid black;
+    border-radius: 30%;
     background-color: aqua;
-    padding: 2px;
+    padding: 10%;
 }
 
 .rank-item {
