--- a/IzvorniKod/frontend/src/cssFiles/Profile.css
+++ b/IzvorniKod/frontend/src/cssFiles/Profile.css
@@ -5,19 +5,35 @@ body {
     height: 100%;
     width: 100%;
 }
+
 .profile-container {
-    margin: 0;
-    height: 100vh;
-    max-width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
+    flex-direction: column;
+    height: 100%;
+    overflow-y: auto;
+    min-height: 100vh;
 }
-.info {
+
+.profile-elements {
     height: 100%;
     width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.profile-info-container {
+    width: 400px;
+    background-color:  #F5F5F5;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: center;
+}
+
+.profile-info-container img {
+    height: 50%;
+    width: 50%;
+    border: 1px solid black;
+    
 }
