--- a/IzvorniKod/frontend/src/cssFiles/Profile.css
+++ b/IzvorniKod/frontend/src/cssFiles/Profile.css
@@ -22,18 +22,30 @@ body {
     justify-content: space-between;
 }
 
+.profile-section {
+    display: flex;
+    width: 400px;
+    flex-direction: column;
+    margin: 5px 5px 5px 5px;
+}
+
 .profile-info-container {
     width: 400px;
-    background-color:  #F5F5F5;
+    background-color:  white;
+    border: solid 1px black;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-content: center;
+    justify-items: space-evenly;
+    align-items: center;
+    border-radius: 15px;
 }
 
 .profile-info-container img {
     height: 50%;
     width: 50%;
     border: 1px solid black;
-    
+    border-radius: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
