--- a/IzvorniKod/frontend/src/cssFiles/shared/shared.css
+++ b/IzvorniKod/frontend/src/cssFiles/shared/shared.css
@@ -1,16 +1,16 @@
 .section-title {
-    text-align: center;
-    max-width: 80%;
-    margin: auto;
-    margin-bottom: 1%;
-    border: 2px solid black;
-    border-radius: 10px;
+  text-align: center;
+  max-width: 80%;
+  margin: auto;
+  margin-bottom: 1%;
+  border: 2px solid black;
+  border-radius: 10px;
 }
 
 .section-title-primary-color {
-    background-color: blanchedalmond;
+  background-color: blanchedalmond;
 }
 
 .section-title-secondary-color {
-    background-color: darkcyan;
+  background-color: aqua;
 }
