--- a/IzvorniKod/frontend/src/cssFiles/home/rank.css
+++ b/IzvorniKod/frontend/src/cssFiles/home/rank.css
@@ -17,7 +17,7 @@
 .rank-mark {
   border: 2px solid black;
   border-radius: 30%;
-  background-color: aqua;
+  background-color: white;
   padding: 10%;
 }
 
