--- a/IzvorniKod/frontend/src/cssFiles/home/rank.css
+++ b/IzvorniKod/frontend/src/cssFiles/home/rank.css
@@ -15,10 +15,10 @@
 }
 
 .rank-mark {
-  border: 2px solid black;
+  border: 2px solid gray;
   border-radius: 30%;
   background-color: white;
-  padding: 10%;
+  padding: 2%;
 }
 
 .rank-item {
