Mijenjani gumbi Prijave, Registracije, Odgovora na upit i Ocjenjivanja upita. Uljepšavanje rankListe. Dodani gumbi na nekim komponentama. Ostale sitne promjene.

--- a/IzvorniKod/frontend/src/cssFiles/home/oglas.css
+++ b/IzvorniKod/frontend/src/cssFiles/home/oglas.css
@@ -21,7 +21,7 @@
 }
 
 .oglas-korisnik-info img {
-  border: 1px solid black;
+  border: 1px solid var(--bs-border-color-translucent);
   width: 75px;
   height: 75px;
   margin: 10px 15px 10px 5px;
