Prepravljen register card. Uređene vrijednosti prikaza enumeracija. Poboljšan način ažuriranja stranice nakon raznih akcija. Dodana kategorija na oglas. Ostale sitne preinake. Uklonjeni komentari i ispisi. Ažurirane ispravne vrijednosti za React-key property.

--- a/IzvorniKod/frontend/src/cssFiles/home/home.css
+++ b/IzvorniKod/frontend/src/cssFiles/home/home.css
@@ -8,7 +8,7 @@ html, body {
 .home-page {
   height: 100%;
   overflow-y: auto;
-  min-height: 100vh;  /*s ovime je popravljen slučaj kada nema oglasa za prikaz - onda bi dio stranice na dnu bio bijel, ovako je cijelo vrijeme plavo*/
+  min-height: 100vh;
 }
 
 .home-page h1 {
@@ -29,7 +29,7 @@ html, body {
     display: grid;
     grid-template-columns: 75% 25%;
     grid-template-areas: "childArea1 childArea2";
-    margin: 2% 15% 0 15%; /* Odmakne sve nekako malo u centar */
+    margin: 2% 15% 0 15%;
   }
 }
 
@@ -42,5 +42,5 @@ html, body {
 }
 
 .body-wrapper-child {
-  margin: 0 5% 0 5%;    /* odmakne oglase i rang listu jedno od drugog */
+  margin: 0 5% 0 5%;
 }
